--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "biome": "biome check ./src",
-    "biome:fix": "biome check --write ./src"
+    "biome": "biome check",
+    "biome:fix": "biome check --write"
   },
   "dependencies": {
     "react": "^19.0.0",
