--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "biome": "biome check",
-    "biome:fix": "biome check --write"
+    "biome:fix": "biome check --write",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -16,9 +18,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@storybook/addon-essentials": "^8.6.6",
+    "@storybook/react": "^8.6.6",
+    "@storybook/react-vite": "^8.6.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "storybook": "^8.6.6",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
