--- a/biome.json
+++ b/biome.json
@@ -2,8 +2,8 @@
 	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": [],
-		"include": ["./src/**/*"]
+		"include": ["./**/*"],
+		"ignore": ["package.json"]
 	},
 	"formatter": {
 		"enabled": true
