--- a/biome.json
+++ b/biome.json
@@ -3,7 +3,7 @@
 	"files": {
 		"ignoreUnknown": false,
 		"include": ["./**/*"],
-		"ignore": ["package.json"]
+		"ignore": ["package.json", "dist"]
 	},
 	"formatter": {
 		"enabled": true
