--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,8 @@
 name: Build
 
 on:
-  pull_request:
+  - push
+  - pull_request
 
 jobs:
   job:
@@ -9,13 +10,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Pnpm
+        uses: pnpm/action-setup@v4
         with:
-          node-version: latest
+          version: latest
       - name: Run Install
         run: pnpm i --frozen-lockfile
       - name: Build
         run: pnpm build
-
-# test
