--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "destyle.css": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
