--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/addon-essentials": "^8.6.6",
     "@storybook/react": "^8.6.6",
     "@storybook/react-vite": "^8.6.6",
+    "@tsconfig/vite-react": "^3.4.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
