--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "storybook": "^8.6.6",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
