--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "destyle.css": "^4.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "destyle.css": "4.0.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@storybook/addon-essentials": "^8.6.6",
-    "@storybook/react": "^8.6.6",
-    "@storybook/react-vite": "^8.6.6",
-    "@tsconfig/vite-react": "^3.4.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "storybook": "^8.6.6",
-    "typescript": "~5.8.0",
-    "vite": "^6.2.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/react": "8.6.12",
+    "@storybook/react-vite": "8.6.12",
+    "@tsconfig/vite-react": "3.4.0",
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.2",
+    "@vitejs/plugin-react-swc": "3.8.1",
+    "storybook": "8.6.12",
+    "typescript": "5.8.3",
+    "vite": "6.2.6",
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
