--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -1,9 +1,10 @@
 name: Frontend CI
 
 on:
-  - push
-  - pull_request
-  - workflow_dispatch
+  push:
+    branches:
+      - main
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -28,13 +29,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
+      - uses: biomejs/setup-biome@v2
         with:
           version: latest
-      - uses: actions/setup-node@v4
-        with:
-          node-version: latest
-          cache: pnpm
       - run: biome ci .
 
   build-storybook:
