--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "biome": "biome check",
     "biome:fix": "biome check --write",
+    "test": "vitest run",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
   },
@@ -23,13 +24,18 @@
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/react": "8.6.12",
     "@storybook/react-vite": "8.6.12",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
     "@tsconfig/vite-react": "3.4.0",
     "@types/react": "19.1.1",
     "@types/react-dom": "19.1.2",
     "@vitejs/plugin-react-swc": "3.8.1",
+    "happy-dom": "17.4.4",
     "storybook": "8.6.12",
     "typescript": "5.8.3",
     "vite": "6.2.6",
-    "vite-tsconfig-paths": "5.1.4"
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.1.1"
   }
 }
