add vitest ui coverage

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "biome": "biome check",
     "biome:fix": "biome check --write",
     "test": "vitest run",
+    "test:ui": "vitest --ui",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
   },
@@ -31,6 +32,8 @@
     "@types/react": "19.1.1",
     "@types/react-dom": "19.1.2",
     "@vitejs/plugin-react-swc": "3.8.1",
+    "@vitest/coverage-v8": "3.1.1",
+    "@vitest/ui": "3.1.1",
     "happy-dom": "17.4.4",
     "storybook": "8.6.12",
     "typescript": "5.8.3",
