--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@floating-ui/react": "0.27.7",
     "destyle.css": "4.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
