--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@floating-ui/react": "0.27.7",
     "destyle.css": "4.0.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-transition-group": "4.4.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
