--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tsconfig/vite-react": "3.4.0",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.3",
+    "@types/react-transition-group": "4.4.12",
     "@vitejs/plugin-react-swc": "3.9.0",
     "@vitest/coverage-v8": "3.1.2",
     "@vitest/ui": "3.1.2",
