--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-	"recommendations": ["biomejs.biome", "vitest.explorer"]
+	"recommendations": [
+		"biomejs.biome",
+		"vitest.explorer",
+		"mizdra.css-modules-kit-vscode"
+	]
 }
