--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 		"vite-tsconfig-paths": "5.1.4",
 		"vitest": "3.2.4"
 	},
-	"packageManager": "pnpm@10.14.0"
+	"packageManager": "pnpm@10.14.0",
+	"volta": {
+		"node": "22.18.0"
+	}
 }
