--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	"dependencies": {
 		"destyle.css": "4.0.1",
 		"react": "19.2.0",
-		"react-dom": "19.2.0"
+		"react-dom": "19.2.0",
+		"storycap": "5.0.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.5",
