--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "cmk && vite",
+		"dev": "cssdts && vite",
 		"typecheck": "tsc --noEmit",
-		"build": "cmk && tsc -b && vite build",
+		"build": "cssdts && tsc -b && vite build",
 		"preview": "vite preview",
-		"cmk": "cmk",
+		"cssdts": "cmk",
 		"biome": "biome check",
 		"biome:fix": "biome check --write",
 		"test": "vitest run",
-		"test:ui": "vitest --ui",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build"
 	},
@@ -32,8 +31,6 @@
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.1",
 		"@vitejs/plugin-react-swc": "4.1.0",
-		"@vitest/coverage-v8": "3.2.4",
-		"@vitest/ui": "3.2.4",
 		"happy-dom": "20.0.0",
 		"storybook": "9.1.10",
 		"typescript": "5.9.3",
