--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "cssdts && vite",
-		"build": "cssdts && tsc -b && vite build",
+		"dev": "cmk && vite",
+		"build": "cmk && tsc -b && vite build",
 		"preview": "vite preview",
-		"typecheck": "tsc --noEmit",
 		"cssdts": "cmk",
+		"typecheck": "tsc --noEmit",
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
 		"test": "vitest run",
