--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.10",
 		"@css-modules-kit/codegen": "0.7.0",
+		"@storybook/addon-vitest": "10.1.10",
 		"@storybook/react-vite": "10.1.10",
 		"@testing-library/jest-dom": "6.9.1",
 		"@testing-library/react": "16.3.1",
@@ -30,7 +31,9 @@
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
 		"@vitejs/plugin-react-swc": "4.2.2",
+		"@vitest/browser-playwright": "4.0.16",
 		"happy-dom": "20.0.11",
+		"playwright": "1.57.0",
 		"storybook": "10.1.10",
 		"typescript": "5.9.3",
 		"vite": "7.3.0",
