--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"typecheck": "tsc --noEmit",
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
-		"test": "vitest run",
+		"test:unit": "vitest run --project=unit",
+		"test:storybook": "docker compose up -d && vitest run --project=storybook",
+		"test": "docker compose up -d && vitest run",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build"
 	},
