--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"typecheck": "tsc --noEmit",
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
-		"test": "docker compose run --rm test-runner",
+		"test": "vitest run --project unit",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build"
 	},
