--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
 		"test": "vitest run --project unit",
+		"test:storybook": "docker compose run --rm test-runner",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build"
 	},
