--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -32,7 +32,7 @@ jobs:
         with:
           node-version: latest
           cache: pnpm
-      # - uses: docker/setup-compose-action@v1
+      - run: pnpm i --frozen-lockfile
       - run: pnpm test
 
   biome:
